--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 data/tweets_english.csv filter=lfs diff=lfs merge=lfs -text
 data/tweets.csv filter=lfs diff=lfs merge=lfs -text
+artifacts/tweets_cleaned.parquet filter=lfs diff=lfs merge=lfs -text
