--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ data/tweets_english.csv filter=lfs diff=lfs merge=lfs -text
 data/tweets.csv filter=lfs diff=lfs merge=lfs -text
 artifacts/tweets_cleaned.parquet filter=lfs diff=lfs merge=lfs -text
 artifacts/tweet_embeddings.npy filter=lfs diff=lfs merge=lfs -text
+artifacts/tweets.index filter=lfs diff=lfs merge=lfs -text
