fix: robust date‐input unpacking; other layout & prompt tweaks

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ GPT_MODEL= gpt-4o
 GPT_TEMPERATURE= 0.4
 GPT_MAX_TOKENS= 1000
 MAX_CONTEXT_TOKENS= 8000
+SUMMARY_TEMPERATURE=0.7
+SUMMARY_MAX_TOKENS=4000
