feat: improve Streamlit UI layout, styling, and page description

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,26 @@
 # .env.example
-OPENAI_API_KEY=openai_key_here
-HF_TOKEN=hf_token_here
-EMBEDDING_MODEL=all-MiniLM-L6-v2
-EMBEDDING_FILE=artifacts/tweet_embeddings.npy
+OPENAI_API_KEY=openai_key_here                          #Streamlit Secrets + Cloudspace env.    
+HF_TOKEN=hf_token_here                                  #Streamlit Secrets + Cloudspace env.
+
+RAW_CSV=data/tweets_english.csv                         #Streamlit Secrets + Cloudspace env.    
+CLEANED_PARQUET=artifacts/tweets_cleaned.parquet        #Streamlit Secrets + Cloudspace env.
+REMOVE_STOPWORDS=true                                   #Streamlit Secrets + Cloudspace env.   
+LEMMATIZE=true                                          #Streamlit Secrets + Cloudspace env.
+
+EMBEDDING_MODEL=all-MiniLM-L6-v2                        #Streamlit Secrets + Cloudspace env.
+EMBEDDING_FILE=artifacts/tweet_embeddings.npy           #Streamlit Secrets + Cloudspace env.     
 
 # Phase 2 / GPT defaults
-GPT_MODEL= gpt-4o
-GPT_TEMPERATURE= 0.4
-GPT_MAX_TOKENS= 1000
-MAX_CONTEXT_TOKENS= 8000
-SUMMARY_TEMPERATURE=0.7
-SUMMARY_MAX_TOKENS=4000
+GPT_MODEL= gpt-4o                                       #Streamlit Secrets    
+GPT_TEMPERATURE= 0.4                                    #Streamlit Secrets    
+GPT_MAX_TOKENS= 1000                                    #Streamlit Secrets      
+MAX_CONTEXT_TOKENS= 8000                                #Streamlit Secrets  
+SUMMARY_TEMPERATURE=0.7                                 #Streamlit Secrets
+SUMMARY_MAX_TOKENS=4000                                 #Streamlit Secrets
+
+REMOVE_STOPWORDS =true                                  #Streamlit Secrets
+LEMMATIZE =true                                         #Streamlit Secrets
+
+RAW_CSV =data/tweets_english.csv                        #Streamlit Secrets
+CLEANED_PARQUET =artifacts/tweets_cleaned.parquet       #Streamlit Secrets
+
